# backtest-engine

./: .gitignore  Agents.md  README.md  build_nuitka_package.sh  config.example.yml  pyproject.toml
.github/workflows/: build.yml
.serena/: project.yml
.serena/memories/: core.md  index.md
.serena/memories/data_provider/: auth.md  cache.md  client.md  client_providers.md  config.md  core.md  exceptions.md  providers.md  storage.md  utils.md
examples/: basic_usage.py  comprehensive_usage.py  run_backtest_example.py
src/backtest_engine/: __init__.py
src/backtest_engine/data_provider/: __init__.py  client.py
src/backtest_engine/data_provider/auth/: __init__.py
src/backtest_engine/data_provider/cache/: __init__.py
src/backtest_engine/data_provider/config/: __init__.py  defaults.py  loader.py  models.py
src/backtest_engine/data_provider/exceptions/: __init__.py  auth.py  base.py  data.py  provider.py  rate_limit.py
src/backtest_engine/data_provider/interfaces/: __init__.py  auth.py  cache.py  models.py  provider.py  storage.py
src/backtest_engine/engine/: __init__.py  defaults.py  engine.py  exits.py  feeder.py  ingestor.py  interfaces.py  loop.py  position.py  position_manager.py  trade_logger.py
tests/: benchmark.py  conftest.py  test_data_provider.py  test_data_provider_edge_cases.py  test_engine_engine.py  test_engine_execution_loop.py  test_engine_feeder.py  test_engine_ingestor.py  test_engine_with_positions.py  test_exit_evaluation.py  test_import_integrity.py  test_position.py  test_position_manager.py  test_regressions.py  test_trade_logger.py
(+16 files in other folders)
