[project]
name = "backtest-engine"
version = "0.1.0"
description = "Event Driven Backtest Framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "polars>=1.0",
    "pyarrow>=15.0",
    "loguru>=0.7",
    "tenacity>=8.2",
    "cryptography>=42.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "httpx>=0.27",
    "respx>=0.21",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "httpx>=0.27",
    "respx>=0.21",
    "nuitka>=4.1.3",
]

[build-system]
requires = ["Nuitka[build-wheel]", "toml"]
build-backend = "nuitka.distutils.Build"

[tool.setuptools.package-data]
backtest_engine = ["*.pyi"]

[tool.nuitka]
# Nuitka package compilation settings
jobs = 8
lto = "yes"
assume-yes-for-downloads = true
remove-output = true
output-dir = "dist"
nofollow-import-to = ["*.tests", "*.test*", "pytest", "respx"]
enable-plugin = ["multiprocessing"]
include-package-data = ["backtest_engine"]
